food-order-file-app-yaml/food-order-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-order-ingress
spec:
  rules:
    - host: food-order.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-food-order-file-app
                port:
                  number: 8082
